Remove dependence on loom